Add logging support

--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
+
         <!--web dependencies-->
         <dependency>
             <groupId>org.webjars</groupId>
