--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>ch.qos.logback</groupId>
@@ -55,7 +59,6 @@
             <artifactId>jquery</artifactId>
             <version>3.2.1</version>
         </dependency>
-
 
         <dependency>
             <groupId>org.thymeleaf.extras</groupId>
