Add password forgotten entity and repository

--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,13 @@
             <artifactId>logback-classic</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>r09</version>
+        </dependency>
+
+
         <!-- Web dependencies-->
         <dependency>
             <groupId>org.webjars</groupId>
