Send an email with forgot password

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port=8181
-spring.profiles.active=dev
+spring.profiles.active=prod
 default.to.address=carmen.pomana04@gmail.com
 token.expiration.length.minutes=120
